# indonesia-programming-language

./: Cargo.toml  LICENSE  Laporan_Rakoda.xlsx  Laporan_Rakoda1.xlsx  Laporan_Rakoda2.xlsx  README.md  cookies.txt  fix_stdlib.py  komponen_navbar.ipl.html  main.rpl  output_coba.docx  rpl.json  scratch_test.rs  tes.txt  test.ipl  web.ipl.html  ~$Laporan_Rakoda2.xlsx
.agents/: AGENTS.md
.github/scripts/: upload_to_gdrive.py
.github/workflows/: build-apk.yml  build-studio-desktop.yml  deploy-docs.yml  release.yml
apps/studio/: README.md  check_png.dart  draw_logo.dart  pubspec.yaml
apps/studio/android/app/: build.gradle.kts
apps/studio/integration_test/: simple_test.dart
apps/studio/lib/: main.dart
apps/studio/linux/: CMakeLists.txt
apps/studio/rust/: Cargo.toml
apps/studio/rust_builder/: pubspec.yaml
apps/studio/test/: widget_test.dart
apps/studio/web/: index.html  manifest.json
apps/studio/windows/: CMakeLists.txt
crates/ast/: Cargo.toml
crates/ast/src/: lib.rs  optimizer.rs
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  main.rs  pkg.rs
crates/errors/: Cargo.toml
crates/errors/src/: lib.rs
crates/interpreter/: Cargo.toml
crates/interpreter/src/: lib.rs  lingkungan.rs  objek.rs  template.rs
crates/interpreter/src/stdlib/: core.rs  env.rs  file.rs  json.rs  kripto.rs  list.rs  matematika.rs  mod.rs  string.rs  waktu.rs
crates/interpreter/src/stdlib/http/: client.rs  download.rs  mod.rs  request.rs  response.rs  upload.rs
crates/lexer/: Cargo.toml
crates/lexer/src/: lib.rs  token.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: lib.rs
crates/parser/: Cargo.toml
crates/parser/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
crates/stdlib/: Cargo.toml
crates/stdlib/src/: json.rs  string.rs  template.rs  waktu.rs
crates/typechecker/: Cargo.toml
crates/typechecker/src/: lib.rs
crates/vm/: Cargo.toml
crates/vm/src/: compiler.rs  heap.rs  lib.rs  machine.rs  opcodes.rs  value.rs
crates/vm/src/stdlib/: ai.rs  cookie.rs  core.rs  db.rs  dev_dashboard.html  dev_dashboard.rs  dokumen.rs  env.rs  file.rs  http.rs  json.rs  kripto.rs  list.rs  log.rs  matematika.rs  mod.rs  regex.rs  session.rs  string.rs  tugas.rs  waktu.rs  web.rs
crates/web/: Cargo.toml
crates/web/src/: lib.rs
documentation/: docusaurus.config.ts  index.html  styles.css
documentation/src/pages/: index.module.css  index.tsx
editors/vscode/: html-language-configuration.json  package-lock.json  package.json  rpl-vscode-1.0.0.vsix  tsconfig.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: rpl-html.tmLanguage.json  rpl.tmLanguage.json
examples/: .env  contoh_excel.rpl  cookie_session.rpl  db_test.rpl  file.ipl  http_phase2.ipl  laporan.rpl.html  modul_lain.rpl  test1.ipl  test_assignment.rpl  test_laporan.rpl  uji_http_status.rpl  uji_kripto.rpl  uji_log.rpl  uji_pakai.rpl  uji_template.rpl  web_laporan.rpl  web_server.ipl
examples/proyek_sekolah/: abim.rpl  sekolah.db  server.rpl
examples/proyek_sekolah/tampilan/: index.rpl.html
examples/proyek_toko/: rute.rpl  server.rpl  toko.db
examples/proyek_toko/kontroler/: produk.rpl  tampilan.rpl
installer/inno/: rpl-setup.iss
installer/linux/: build-appimage.sh
installer/macos/: build-dmg.sh
installer/nsis/: rpl-setup.nsi
rpl_modules/127.0.0.1/: main.rpl
scratch_pdf/: Cargo.toml
scratch_pdf/src/: main.rs
(+55 files in other folders)
