[package]
name = "interpreter"
version = "0.1.0"
edition = "2024"

[dependencies]
errors = { path = "../errors" }
ast = { path = "../ast" }
lexer = { path = "../lexer" }
parser = { path = "../parser" }
rand = "0.10.2"
chrono = "0.4.45"
serde_json = "1.0.150"
ureq = { version = "3.3.0", features = ["json", "multipart"] }
http = "1.4.2"
base64 = "0.22.1"
