[package]
name = "runtime"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
lexer = { path = "../lexer" }
parser = { path = "../parser" }
ast = { path = "../ast" }
vm = { path = "../vm" }
errors = { version = "1.0.0", path = "../errors" }
interpreter = { path = "../interpreter" }
web = { path = "../web" }
