[package]
name = "vm"
version.workspace = true
edition.workspace = true

[dependencies]
ast = { path = "../ast" }
serde_json = "1.0"
ureq = "3.3.0"
dotenvy = "0.15.7"
chrono = "0.4"
rand = "0.8"
errors = { path = "../errors" }
flate2 = "1.1.9"
brotli = "8.0.4"
uuid = { version = "1.23.4", features = ["v4"] }
lexer = { path = "../lexer" }
parser = { path = "../parser" }
interpreter = { path = "../interpreter" }
rusqlite = { version = "0.40.1", features = ["bundled"] }
mysql = "28.0.0"
postgres = "0.19.14"
md-5 = "0.10.6"
sha2 = "0.10.8"
multipart = "0.18"
tokio = { version = "1.41.1", features = ["full"] }
axum = "0.7.9"
bytes = "1.9.0"
futures-util = "0.3.31"
